--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
 .App {
-  text-align: center;
+  background-color: rgb(250, 250, 250);
+  min-height: 100vh;
 }
 
+.App-content{
+  align-items: center;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
